Compucom CCQA/src/objects/FCST_Revenue_Recognization_Product__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_del__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Date Unused Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <formula>Revenue_Type__c+&apos;#&apos;+Product__c+&apos;#&apos;+ Period__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <label>Period</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <label>Product Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Offering Name</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>FCST Revenue Recognization Products</relationshipLabel>
        <relationshipName>FCST_Revenue_Recognization_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revenue_Type__c</fullName>
        <label>Revenue Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>FCST Revenue Recognization Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Period__c</columns>
        <columns>Amount__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Revenue_Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RRP-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FCST Revenue Recognization Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>